--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React form built using Relay",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build" : "tsc"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/vgedzius/react-relay-form/issues"
   },
-  "homepage": "https://github.com/vgedzius/react-relay-form#readme"
+  "homepage": "https://github.com/vgedzius/react-relay-form#readme",
+  "devDependencies": {
+    "typescript": "^4.2.3"
+  }
 }
